AMP-27273 fixing GIS pie chart popups alignment

--- a/amp/TEMPLATE/ampTemplate/css_2/amp-rtl.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp-rtl.css
@@ -655,7 +655,6 @@ a.last_page {
     content: "\e079";
 }
 
-
 #sidebar .sidebar-icons-only-button {
     text-align: left;
     padding-left: 11px;
@@ -738,6 +737,6 @@ th {
     text-align: right !important;
 }
 
-.panel-body, .panel-footer {
+.panel-body, .panel-footer, .panel-heading {
     text-align: right !important;
 }
